# point-collocation

./: .gitignore  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/scripts/: test_examples.py
.github/workflows/: publish.yml  test-notebooks.yml
docs/: 1_l3_examples.md  2_l2_examples.md  3_many_points.md  4_icesat2.md  5_more_products.md  contributing.md  index.md  installation.md  quickstart.md  releasing.md
docs/stylesheets/: extra.css
examples/: __init__.py  basic_daily.py  bug_docs_3_icesat2_l3.ipynb  copernicus.ipynb  diagnostics.py  docs_1_ecco_l3.ipynb  docs_1_l3_examples.ipynb  docs_1_merra.ipynb  docs_1_mur_l4.ipynb  docs_1_pace_l3.ipynb  docs_2_l2_examples.ipynb  docs_2_many_points.ipynb  docs_2_pace_l2.ipynb  docs_3_discovr_epic_l2.ipynb  docs_3_icesat2_l3.ipynb  docs_3_many_points.ipynb  docs_3_pace_l2.ipynb  docs_3_tempo.ipynb  docs_4_discovr_epic.ipynb  docs_4_ecco.ipynb  docs_4_icesat2.ipynb  docs_4_l3_products.ipynb  docs_4_more_products.ipynb  docs_4_mur.ipynb  docs_4_tempo.ipynb  docs_5_more_products.ipynb  docs_l2_examples.ipynb  docs_l3_examples.ipynb  docs_many_points.ipynb  docs_quickstart.ipynb  l2_examples.ipynb  many_points.ipynb  more_examples.ipynb  multi_file.py  multi_time.ipynb  pace_avw.py  pace_rrs.py  quickstart.ipynb  testing_more_products.ipynb  testing_other_products.ipynb
examples/fixtures/: earthaccess_results_sample_l2.json  earthaccess_results_sample_l3.json  make-earthaccess-fixtures.py  multi_time.nc  pace_l2_sample.nc  pace_l3_sample.nc  points.csv  points_1000.csv  points_1000_usa.csv
scripts/: generate_examples.py
src/earthaccess_matchup/: __init__.py
src/earthaccess_matchup/adapters/: __init__.py  base.py  earthaccess.py
src/earthaccess_matchup/core/: __init__.py  engine.py  types.py
src/earthaccess_matchup/diagnostics/: __init__.py  report.py
src/earthaccess_matchup/extensions/: __init__.py  accessor.py  qa.py  spatial.py
src/point_collocation/: __init__.py  profiles.py
src/point_collocation/adapters/: __init__.py  base.py  earthaccess.py
src/point_collocation/core/: __init__.py  _coord_spec.py  _granule.py  _open_method.py  engine.py  plan.py
src/point_collocation/diagnostics/: __init__.py  report.py
src/point_collocation/extensions/: __init__.py  accessor.py  qa.py  spatial.py
tests/: __init__.py  conftest.py  test_adapters.py  test_api.py  test_matchup.py  test_plan.py
