[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earthaccess-matchup"
version = "0.1.0"
description = "Point-based lat/lon/time matchups against cloud-hosted NetCDF/Zarr granules"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "xarray>=2023.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
earthaccess = ["earthaccess>=0.9.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
all = [
    "earthaccess-matchup[earthaccess,dev]",
]

[project.urls]
Repository = "https://github.com/fish-pace/earthaccess_matchup"

[tool.hatch.build.targets.wheel]
packages = ["src/earthaccess_matchup"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
files = ["src"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
