[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "point-collocation"
version = "0.6.0"
description = "Point-based lat/lon/time matchups against cloud-hosted NetCDF/Zarr granules"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "xarray>=2025.07.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "earthaccess>=0.15.0",
    "cf-xarray>=0.7.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
xoak-extra = ["xoak>=0.2.0", "scikit-learn>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pyarrow>=10.0",
    "cf-xarray>=0.7.0",
]
docs = [
    "mkdocs>=1.5,<2.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "nbconvert>=7.0",
]
all = [
    "point-collocation[xoak-extra]",
]

[project.urls]
Repository = "https://github.com/fish-pace/point-collocation"

[tool.hatch.build.targets.wheel]
packages = ["src/point_collocation"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
files = ["src"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
